<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeight"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_dp"
        android:layout_marginTop="@dimen/large_margin_dp"
        android:layout_marginEnd="@dimen/large_margin_dp"
        android:background="@color/card_background"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation"
        app:cardMaxElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background">

            <TextView
                android:id="@+id/textWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/text_weight"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editWeight"
                android:layout_width="@dimen/width_edit"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:autofillHints=""
                android:hint="@string/zero"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHighlight="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textColorLink="@color/text_hint"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textWeight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWeight"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textKilo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/kilo"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/editWeight"
                app:layout_constraintTop_toBottomOf="@id/textWeight"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeight"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin_dp"
        android:background="@color/card_background"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation"
        app:cardMaxElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardWeight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background">

            <TextView
                android:id="@+id/textHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/text_height"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editHeight"
                android:layout_width="@dimen/width_edit"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:autofillHints=""
                android:hint="@string/zero"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHighlight="@color/text_hint"
                android:textColorHint="@color/text_hint"
                android:textColorLink="@color/text_hint"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textHeight"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textHeight"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/centimeter"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/editHeight"
                app:layout_constraintTop_toBottomOf="@id/textHeight"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_dp"
        android:layout_marginTop="@dimen/large_margin_dp"
        android:layout_marginEnd="@dimen/large_margin_dp"
        android:backgroundTint="@color/button_background"
        android:paddingTop="@dimen/padding_dp"
        android:paddingBottom="@dimen/padding_dp"
        android:text="@string/calculate"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeight" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardResult"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_margin_dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin_dp"
        android:background="@color/card_background"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/elevation"
        app:cardMaxElevation="@dimen/elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculate"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background">

            <TextView
                android:id="@+id/textIndex"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/text_height" />

            <TextView
                android:id="@+id/textResult"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:textAlignment="center"
                android:textSize="@dimen/medium_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textIndex"
                tools:text="@string/text_height"
                tools:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/textInfo"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:textAlignment="center"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textResult"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/text_height" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>